infra/k8s/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
  labels:
    app: comments-api-service
spec:
  selector:
    matchLabels:
      app: comments-api-service
  template:
    metadata:
      labels:
        app: comments-api-service
    spec:
      containers:
        - name: comments-api
          image: gauravbapat93/node-micro-comments
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4001
