infra/k8s/comments-clip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-clip-service
spec:
  selector:
    app: comments-api-service
  type: ClusterIP
  ports:
    - name: comments-port
      protocol: TCP
      port: 4001
      targetPort: 4001
