infra/k8s/event-bus-clip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  selector:
    app: event-bus-api-service
  type: ClusterIP
  ports:
    - name: event-bus-port
      protocol: TCP
      port: 4005
      targetPort: 4005
