infra/k8s/moderation-clip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-clip-service
spec:
  selector:
    app: moderation-api
  ports:
    - name: moderation-port
      protocol: TCP
      port: 4003
      targetPort: 4003
