infra/k8s/posts-clip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-clip-service
spec:
  selector:
    app: posts-api-service
  type: ClusterIP
  ports:
    - name: posts-port
      protocol: TCP
      port: 4000
      targetPort: 4000
