infra/k8s/query-clip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-clip-service
spec:
  selector:
    app: query-api-service
  ports:
    - name: query-port
      protocol: TCP
      port: 4004
      targetPort: 4004
